feature: add jacoco maven plugin for coverage * (pom) inherit plugins from parent pom through plugin management * add option to skip store tests if needed * (Jenkinsfile) collect coverage